@@ -475,18 +475,18 @@ public class CollectionsAPIDistributedZkTest extends AbstractFullDistribZkTestBa
     if (secondConfigSet) {
       createCmd.setCollectionConfigName("conf1");
     }
-    
+
     makeRequest(getBaseUrl((HttpSolrClient) clients.get(1)), createCmd);
     
     // try and create a SolrCore with no collection name
     createCmd.setCollection(null);
     createCmd.setCoreName("corewithnocollection2");
-    
+
     makeRequest(getBaseUrl((HttpSolrClient) clients.get(1)), createCmd);
     
     // in both cases, the collection should have default to the core name
     cloudClient.getZkStateReader().updateClusterState(true);
-    assertTrue( cloudClient.getZkStateReader().getClusterState().hasCollection("corewithnocollection"));
+    assertTrue(cloudClient.getZkStateReader().getClusterState().hasCollection("corewithnocollection"));
     assertTrue(cloudClient.getZkStateReader().getClusterState().hasCollection("corewithnocollection2"));
   }
 
@@ -1098,45 +1098,22 @@ public class CollectionsAPIDistributedZkTest extends AbstractFullDistribZkTestBa
       String newReplicaName = Assign.assignNode(collectionName, client.getZkStateReader().getClusterState());
       ArrayList<String> nodeList = new ArrayList<>(client.getZkStateReader().getClusterState().getLiveNodes());
       Collections.shuffle(nodeList, random());
-      CollectionAdminRequest.AddReplica addReplica = new CollectionAdminRequest.AddReplica();
-      addReplica.setCollectionName(collectionName);
-      addReplica.setShardName("shard1");
-      addReplica.setNode(nodeList.get(0));
-      client.request(addReplica);
 
-      long timeout = System.currentTimeMillis() + 3000;
-      Replica newReplica = null;
-
-      for (; System.currentTimeMillis() < timeout; ) {
-        Slice slice = client.getZkStateReader().getClusterState().getSlice(collectionName, "shard1");
-        newReplica = slice.getReplica(newReplicaName);
-      }
-
-      assertNotNull(newReplica);
+      Replica newReplica = doAddReplica(collectionName, "shard1",
+          Assign.assignNode(collectionName, client.getZkStateReader().getClusterState()),
+          nodeList.get(0), client, null);
 
       log.info("newReplica {},\n{} ", newReplica, client.getZkStateReader().getBaseUrlForNodeName(nodeList.get(0)));
 
       assertEquals("Replica should be created on the right node",
           client.getZkStateReader().getBaseUrlForNodeName(nodeList.get(0)), newReplica.getStr(ZkStateReader.BASE_URL_PROP));
 
-      newReplicaName = Assign.assignNode(collectionName, client.getZkStateReader().getClusterState());
-      addReplica = new CollectionAdminRequest.AddReplica();
-      addReplica.setCollectionName(collectionName);
-      addReplica.setShardName("shard2");
       Properties props = new Properties();
       String instancePathStr = createTempDir().toString();
       props.put(CoreAdminParams.INSTANCE_DIR, instancePathStr); //Use name via the property.instanceDir method
-      addReplica.setProperties(props);
-      client.request(addReplica);
-
-      timeout = System.currentTimeMillis() + 3000;
-      newReplica = null;
-
-      for (; System.currentTimeMillis() < timeout; ) {
-        Slice slice = client.getZkStateReader().getClusterState().getSlice(collectionName, "shard2");
-        newReplica = slice.getReplica(newReplicaName);
-      }
-
+      newReplica = doAddReplica(collectionName, "shard2",
+          Assign.assignNode(collectionName, client.getZkStateReader().getClusterState()),
+          null, client, props);
       assertNotNull(newReplica);
 
       HttpSolrClient coreclient = new HttpSolrClient(newReplica.getStr(ZkStateReader.BASE_URL_PROP));
@@ -1160,9 +1137,44 @@ public class CollectionsAPIDistributedZkTest extends AbstractFullDistribZkTestBa
       } catch (SolrException e) {
         assertTrue(e.getMessage().contains("Another replica with the same core name already exists for this collection"));
       }
+
+
+      // Check that specifying property.name works. DO NOT remove this when the "name" property is deprecated
+      // for ADDREPLICA, this is "property.name". See SOLR-7132
+      props = new Properties();
+      props.put(CoreAdminParams.NAME, "propertyDotName");
+
+      newReplica = doAddReplica(collectionName, "shard1",
+          Assign.assignNode(collectionName, client.getZkStateReader().getClusterState()),
+          nodeList.get(0), client, props);
+      assertEquals("'core' should be 'propertyDotName' ", "propertyDotName", newReplica.getStr("core"));
     }
   }
 
+  private Replica doAddReplica(String collectionName, String shard, String newReplicaName, String node,
+                               CloudSolrClient client, Properties props) throws IOException, SolrServerException {
+    CollectionAdminRequest.AddReplica addReplica = new CollectionAdminRequest.AddReplica();
+
+    addReplica.setCollectionName(collectionName);
+    addReplica.setShardName(shard);
+    if (node != null) {
+      addReplica.setNode(node);
+    }
+    if (props != null) {
+      addReplica.setProperties(props);
+    }
+    client.request(addReplica);
+    long timeout = System.currentTimeMillis() + 3000;
+    Replica newReplica = null;
+
+    for (; System.currentTimeMillis() < timeout; ) {
+      Slice slice = client.getZkStateReader().getClusterState().getSlice(collectionName, shard);
+      newReplica = slice.getReplica(newReplicaName);
+    }
+
+    assertNotNull(newReplica);
+    return newReplica;
+  }
   @Override
   protected QueryResponse queryServer(ModifiableSolrParams params) throws SolrServerException, IOException {
 
